--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <li>Лікування акне</li>
     <li>Видалення розацеї, судини, пігментних плям, рубців, шрамів та розтяжок</li>
 </ul>
+<img src="./images/Инстаграм.png">
 </section>
 <section> 
     <h2>Переваги апарату</h2>
