--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <li>Лікування акне</li>
     <li>Видалення розацеї, судини, пігментних плям, рубців, шрамів та розтяжок</li>
 </ul>
-<img src="./images/Инстаграм.png">
+<img src="./images/Картинка.png">
 </section>
 <section> 
     <h2>Переваги апарату</h2>
